--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -8,4 +8,7 @@ list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
 add_library(door_wind SHARED door_wind.cc)
 target_link_libraries(door_wind ${GAZEBO_LIBRARIES})
 
+add_library(simple_door_config SHARED simple_door_config.cc)
+target_link_libraries(simple_door_config ${GAZEBO_LIBRARIES})
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
